--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,16 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/primeicons/primeicons.css",
+              "./node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/quill/dist/quill.core.css", 
+	            "./node_modules/quill/dist/quill.snow.css", 
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/quill/dist/quill.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -123,6 +130,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "glukyempty"
+    }
+  },
+  "defaultProject": "glukyempty",
+  "cli": {
+    "analytics": "85801f61-6b61-4d72-aa51-635f6981e4fe"
+  }
 }
