--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.6",
     "@types/quill": "^2.0.3",
     "firebase": "^7.18.0",
+    "ngx-ui-loader": "^9.1.1",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.3",
     "quill": "^1.3.7",
