--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~10.0.6",
     "@types/quill": "^2.0.3",
     "firebase": "^7.18.0",
+    "ngx-infinite-scroll": "^9.0.0",
+    "ngx-spinner": "^10.0.1",
     "ngx-ui-loader": "^9.1.1",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.3",
